--- a/src/App.css
+++ b/src/App.css
@@ -75,3 +75,21 @@ body {
 .word-splits {
   cursor: pointer;
 }
+
+.home-search {
+  margin-left: 20%;
+  margin-right: 20%;
+  margin-top: 10%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+.word-word {
+  cursor: pointer;
+}
+
+.word-word:hover {
+  background-color: #f0ff24ab;
+  border-radius: 2px;
+}
